--- a/line-bot/package.json
+++ b/line-bot/package.json
@@ -17,9 +17,10 @@
         "@goat-sdk/wallet-viem": "0.2.12",
         "@line/bot-sdk": "^10.3.0",
         "ai": "~4.0.3",
+        "axios": "^1.12.2",
         "dotenv": "^16.4.5",
         "viem": "2.23.4",
-        "zod": "3.23.8"
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/node": "^24.6.2"
