--- a/line-bot/tsconfig.json
+++ b/line-bot/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
         "outDir": "dist",
-        "types": ["node"]
+        "types": ["node"],
+        "moduleResolution": "node"
     },
     "include": ["index.ts"],
     "exclude": ["node_modules", "dist"]
